--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                               <div class="carousel-item active">
                                 <img class="d-block " src="img/rabstol_net_clothes_brands_08.jpg" style="height: 600px; width: 100%;" alt="First slide">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Guess</h5>
+                                    <a style="text-decoration: none;" href="#"><h5 class="text-light">Guess</h5></a>
                                     <p> - это гармоничное сочетание классики и последних модных тенденций, 
                                         контраст и непредсказуемость, шик и изящество, новаторство и изысканность.</p>
                                   </div>
@@ -81,21 +81,21 @@
                               <div class="carousel-item">
                                 <img class="d-block " src="img/992205506.jpg"style="height: 600px; width: 100%;" alt="Second slide">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Nike</h5>
+                                    <a style="text-decoration: none;" href="#"><h5 class="text-light">Nike</h5></a>
                                     <p> – это не просто бренд, это стиль жизни.</p>
                                   </div>
                             </div>
                                 <div class="carousel-item">
                                   <img class="d-block " src="img/6ee378a4703e1dfd719e7c5cdcf71fd3.png" style="height: 600px; width: 100%;" alt="Third slide">
                                   <div class="carousel-caption d-none d-md-block">
-                                      <h5>Balenciaga</h5>
+                                    <a style="text-decoration: none;" href="#"><h5 class="text-light">Balenciaga</h5></a>
                                       <p> - это уже ставшие культовыми ботильоны, высокие сапоги с заостренным носом и босоножки с нарочито грубыми шнурками.</p>
                                     </div>
                               </div>
                               <div class="carousel-item">
                                 <img class="d-block " src="img/hd-puma-logo-wallpaper.jpg" style="height: 600px; width: 100%;" alt="Fourth slide">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Puma </h5>
+                                    <a style="text-decoration: none;" href="#"><h5 class="text-light">Puma</h5></a>
                                     <p> - это крупнейший немецкий бренд спортивной обуви и одежды.</p>
                                   </div>  
                             </div>
@@ -115,10 +115,55 @@
                 <div>
                     <h4 class="text-center">Популярные товары</h4>
                 </div>
-                <div></div>
+                <div class="mt-5">
+                    <div class="card-group">
+                        <div class="card">
+                            <a style="text-decoration: none;" href="#">
+                                <img class="card-img-top" src="img/QN2LVifiEGs.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title text-dark">Кроссовки</h5>
+                                    <p class="card-text text-dark">Jordan 1 Low SE Mighty Swooshers Pink</p>
+                                </div>
+                                <div class="mt-3">
+                                    <p class="card-text text-uppercase look-2">Перейти</p>
+                                </div>
+                            </div>
+                          </a>
+                        </div>
+                        <div class="card">
+                            <a style="text-decoration: none;" href="#">
+                                <img class="card-img-top" src="img/Wx-qdQviy9M.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title text-dark">Кроссовки</h5>
+                                    <p class="card-text text-dark">Adidas Forum 84 Low</p>
+                                </div>
+                                <div class="mt-3">
+                                    <p class="card-text text-uppercase look-2">Перейти</p>
+                                </div>
+                            </div>
+                          </a>
+                        </div>
+                        <div class="card">
+                          <a style="text-decoration: none;" href="#">
+                                <img class="card-img-top" src="img/-7JZpzY8EF4.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <div>
+                                    <h5 class="card-title text-dark">Кроссовки</h5>
+                                    <p class="card-text text-dark">Travis Scott x Air Jordan 1 Low OG</p>
+                                </div>
+                                <div class="mt-3">
+                                    <p class="card-text text-uppercase look-2">Перейти</p>
+                                </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+                </div>
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer class="mt-5 border-top">бла бла бла</footer>
 </body>
 </html>
